; -*- coding: utf-8 -*-
[metadata]
name = pgkstuduino
version = 0.9
url = https://github.com/PGkids/pgkstuduino
author = PGkids Laboratory
author_email = lab@pgkids.co.jp
;license = MIT
description = pgkstuduino: pystuduino wrapper
;long_description = file: README.md

[options]
zip_safe = False
packages = find:
include_package_data = True
